# reco-tut-sor

./: README.md  setup.cfg  setup.py
code/nbs/: reco-tut-sor-02-recommender-model.py  reco-tut-sor-02-xgboost.py  reco-tut-sor-t1-01-eda.py  reco-tut-sor-t1-02-baseline.py
