
[metadata]
name = reco-tut-base
description = RecSys Tutorials
author = RecoHut
author-email = recohut@gmail.com
license = mit
url = https://github.com/sparsh-ai/reco-tut-base
long-description = file: README.md
# Change if running only on Windows, Mac or Linux (comma-separated)
platforms = any
# Add here all kinds of additional classifiers as defined under
# https://pypi.python.org/pypi?%3Aaction=list_classifiers
classifiers = Programming Language :: Python

[options]
zip_safe = False
packages = find:
include_package_data = True
package_dir =
    =code
# DON'T CHANGE THE FOLLOWING LINE! IT WILL BE UPDATED BY PYSCAFFOLD!
setup_requires = pyscaffold>=3.1a0,<3.2a0
# Add here dependencies of your project (semicolon/line-separated), e.g.
install_requires =
    numpy
    pandas

# Require a specific Python version, e.g. Python 2.7 or >= 3.4
python_requires = >=3.7

[options.packages.find]
where = code

[options.entry_points]
# Add here console scripts like:
# console_scripts =
#     rec-popular = baseline_algorithm.rec_popular:main
#     verify-submission = verify_submission.verify_subm:main
#     score-submission = score_submission.score_subm:main

[aliases]
build = bdist_wheel
release = build upload

[bdist_wheel]
# Use this option if your package is pure-python
universal = 1

[devpi:upload]
# Options for the devpi: PyPI server and packaging tool
# VCS export must be deactivated since we are using setuptools-scm
no-vcs = 1
formats = bdist_wheel

[flake8]
# Some sane defaults for the code style checker flake8
exclude =
    .tox
    build
    dist
    .eggs

[pyscaffold]
# PyScaffold's parameters when the project was created.
# This will be used when updating. Do not change!
version = 4.0.2
package = reco-tut-base